# W_Analysis

./: README.txt  make_comparison.pl
condor/: Run_Reduction.C  auto_condor.pl  submit.csh
macros/: CompareVariableConditions.C  CompareWness.C  MergeCondorOutput.C  Run_Calculation.C  Run_Generation.C  Run_InteractiveBasicCut.C  Run_SBRextract.C  Run_dw23WnessFitter.C  dw23Plots.C  regenerate_all.sh
runlists/: pp510Run13_MergedFileList.txt  pp510Run13_RunNumberList.txt  run12_pDSTs.txt  run13_pDSTs.txt  runDBdump.txt
src/: AsymmetryCalculator.C  AsymmetryCalculator.h  BasicCutTreeVariables.C  BasicCutTreeVariables.h  CalculateLikelihoodFunctions.C  CalculateLikelihoodFunctions.h  DuplicateSearch.C  DuplicateSearch.h  EventComparison.C  EventComparison.h  FilterEvents.C  FilterEvents.h  GeneratePhysicsDistributions.C  GeneratePhysicsDistributions.h  HelperFunctions.C  HelperFunctions.h  Makefile.am  MergeTrees.C  MergeTrees.h  Plotter.C  Plotter.h  ReduceProduction.C  ReduceProduction.h  ReduceProductionChain.C  ReduceProductionChain.h  Run13Triggers.C  Run13Triggers.h  SBRextract.C  SBRextract.h  SingleMuons.C  SingleMuons.h  SingleMuonsConsts.h  SingleMuonsLikelihood.C  SingleMuonsLikelihood.h  SingleMuonsLinkDef.h  TranslateTree.C  TranslateTree.h  W2eGetPol.C  W2eGetPol.h  dw23VsWness.C  (+1 more)
xcheck/spin_compare/: fullClean.csh
xcheck/spin_compare/data/: francesca_XC_000.txt  mike_XC_000.txt
xcheck/spin_compare/macros/: Run_PatternComparison.C
xcheck/spin_compare/src/: ComparePatterns.C  ComparePatterns.h  EventSet.C  EventSet.h  LinkDef.h  Makefile.am
xcheck/tree_compare/: DumpAbrahamTree.C  DumpDanielTree.C  DumpMikeTree.C
